# red-pen.ink

./: README.md
backend/feedback/: .gitignore  pyproject.toml  ruff.toml
backend/feedback/src/feedback/: main.py
backend/feedback/src/feedback/core/: __init__.py  ollama.py  spacy.py
backend/feedback/src/feedback/tag/: tag.py
backend/python/: .gitignore  pyproject.toml
backend/python/data/: good.json  marked.json
backend/python/legacy/feedback/: config.py  util.py
backend/python/legacy/feedback/core/: __init__.py
backend/python/legacy/feedback/core/ml/: index.py  llm.py  nlp.py
backend/python/legacy/feedback/models/: response.py
backend/python/refactor/feedback/: app.py  config.py
backend/python/refactor/feedback/core/ml/: index.py  llm.py  nlp.py
backend/python/refactor/feedback/core/query/: prompts.py  queries.py
backend/python/refactor/feedback/routers/: check.py  injest.py
backend/python/refactor/feedback/schemas/: records.py  response.py
backend/python/refactor/feedback/utils/: parse.py  tag.py
backend/python/src/feedback/: app.py  config.py  sandbox.py  util.py
backend/python/src/feedback/core/ml/: index.py
backend/python/src/feedback/core/query/: queries.py
backend/python/src/feedback/core/tag/: tag.py
backend/python/src/feedback/routers/: check.py  injest.py
backend/python/src/feedback/utils/: extract.py  tag.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/.tanstack/tmp/: 41313bb7-bc2987d0ecab21ccfca48cd65252c855
frontend/src/: routeTree.gen.ts  supertokens.ts  types.ts
(+15 files in other folders)
